# dev4cloud/controllers/documentController.js
@@ -1,8 +1,11 @@
 const Document = require('../models/document');
+const multer = require('multer');
+const upload = multer();
+
 
 exports.getAllDocuments = async (req, res) => {
   try {
-    const documents = await Document.find();
+    const documents = await Document.find().populate('conversationId'); // Populate to include conversation details
     res.json(documents);
   } catch (err) {
     res.status(500).json({ message: err.message });
@@ -13,18 +16,40 @@ exports.getDocumentById = async (req, res) => {
   try {
     const document = await Document.findById(req.params.id);
     if (!document) return res.status(404).json({ message: 'Document not found' });
-    res.json(document);
+
+    res.setHeader('Content-Type', 'application/pdf');
+    res.setHeader('Content-Disposition', `attachment; filename="${document.title}.pdf"`);
+    res.send(document.pdfData);
+
   } catch (err) {
     res.status(500).json({ message: err.message });
   }
 };
 
+
 exports.createDocument = async (req, res) => {
-  const { userId, author, title, year, url, isbn, type, tags } = req.body;
+
+  const { userId, conversationId, author, title, year, url, isbn, type, tags } = req.body;
+  console.log(req.files[0].buffer)
+
   try {
-    const newDocument = new Document({ userId, author, title, year, url, isbn, type, tags });
+    const pdfData = req.files[0].buffer   
+    console.log(pdfData)
+    const newDocument = new Document({ 
+      userId, 
+      conversationId, 
+      author, 
+      title, 
+      year, 
+      url, 
+      isbn, 
+      type, 
+      tags,
+      pdfData 
+    });
+
     await newDocument.save();
-    res.status(201).json(newDocument);
+    res.status(201).json({ message: 'Document created successfully' }); // Rückmeldung ohne PDF-Daten
   } catch (err) {
     res.status(500).json({ message: err.message });
   }
@@ -32,7 +57,7 @@ exports.createDocument = async (req, res) => {
 
 exports.updateDocument = async (req, res) => {
   try {
-    const document = await Document.findByIdAndUpdate(req.params.id, req.body, { new: true });
+    const document = await Document.findByIdAndUpdate(req.params.id, req.body, { new: true }).populate('conversationId'); // Populate to include updated conversation details
     if (!document) return res.status(404).json({ message: 'Document not found' });
     res.json(document);
   } catch (err) {
