# dev4cloud/controllers/promptController.js
@@ -1,8 +1,9 @@
 const Prompt = require('../models/prompt');
+const Message = require('../models/message');
 
 exports.getAllPrompts = async (req, res) => {
   try {
-    const prompts = await Prompt.find();
+    const prompts = await Prompt.find().populate('conversationId');
     res.json(prompts);
   } catch (err) {
     res.status(500).json({ message: err.message });
@@ -11,7 +12,7 @@ exports.getAllPrompts = async (req, res) => {
 
 exports.getPromptById = async (req, res) => {
   try {
-    const prompt = await Prompt.findById(req.params.id);
+    const prompt = await Prompt.findById(req.params.id).populate('conversationId');
     if (!prompt) return res.status(404).json({ message: 'Prompt not found' });
     res.json(prompt);
   } catch (err) {
@@ -20,10 +21,21 @@ exports.getPromptById = async (req, res) => {
 };
 
 exports.createPrompt = async (req, res) => {
-  const { userId, prompt } = req.body;
+  const { userId, conversationId, prompt } = req.body;
   try {
-    const newPrompt = new Prompt({ userId, prompt });
+    const newPrompt = new Prompt({ userId, conversationId, prompt });
     await newPrompt.save();
+
+    // Erstellen einer entsprechenden Nachricht
+    const newMessage = new Message({
+      userId,
+      conversationId,
+      role: 'user',
+      content: prompt,
+      created_at: new Date()
+    });
+    await newMessage.save();
+
     res.status(201).json(newPrompt);
   } catch (err) {
     res.status(500).json({ message: err.message });
@@ -32,7 +44,7 @@ exports.createPrompt = async (req, res) => {
 
 exports.updatePrompt = async (req, res) => {
   try {
-    const prompt = await Prompt.findByIdAndUpdate(req.params.id, req.body, { new: true });
+    const prompt = await Prompt.findByIdAndUpdate(req.params.id, req.body, { new: true }).populate('conversationId');
     if (!prompt) return res.status(404).json({ message: 'Prompt not found' });
     res.json(prompt);
   } catch (err) {
