# dev4cloud/models/message.js
@@ -1,0 +1,13 @@
+const mongoose = require('mongoose');
+const { Schema } = mongoose;
+
+const messageSchema = new Schema({
+    userId: { type: Schema.Types.ObjectId, ref: 'User', required: true },
+    conversationId: { type: Schema.Types.ObjectId, ref: 'Conversation', required: true },
+    role: { type: String, required: true, enum: ['user', 'ai'] },
+    content: { type: String, required: true },
+    created_at: { type: Date, default: Date.now }
+  });
+
+  const Message = mongoose.model('Message', messageSchema);
+  module.exports = Message;
