# dev4cloud/models/prompt.js
@@ -3,6 +3,7 @@ const { Schema } = mongoose;
 
 const promptSchema = new Schema({
   userId: { type: Schema.Types.ObjectId, ref: 'User', required: true },
+  conversationId: { type: Schema.Types.ObjectId, ref: 'Conversation', required: true },
   prompt: { type: String, required: true },
   created_at: { type: Date, default: Date.now },
   updated_at: { type: Date, default: Date.now }
